src/global.css
:root {
  --page-width: 40vw;
  --page-height: 85vh;
  --cover-margin: calc(var(--page-width) * 0.01);
  --cover-gap: calc(var(--page-width) * 0.005);
  --page-inset: calc(var(--page-width) * 0.015);
  --ring-width: calc(var(--page-width) * 0.1);

  --notebook-max-width: 1440px;
  --notebook-max-height: 85vh;
  --max-page-width: calc(var(--notebook-max-width)/2 - 2*var(--cover-margin) - 2*var(--page-inset));
  --max-page-height: calc(var(--notebook-max-height) - 2*var(--cover-margin));
  
  --adjusted-page-width: min(var(--page-width), var(--max-page-width));
  --adjusted-page-height: min(var(--page-height), var(--max-page-height));

  --base-font-size: 15px;
  --line-height-multiplier: 1.7;
  --line-thickness: 1px;
  --lined-paper-line-height: calc(var(--base-font-size) * var(--line-height-multiplier));
  --lined-paper-line-height-blank: calc(var(--lined-paper-line-height) - var(--line-thickness));

  --canvas-width: 500px;
  --canvas-height: 500px;

  --toolbar-width: calc(var(--canvas-width)*0.9);
  --toolbar-height: calc(var(--canvas-height)*0.05);
}

 /* body {
        margin: 0;
        height: 100vh;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        background-color: #f7f8f9;
        font-family: 'Courier New', Courier, monospace;
    } */

    /* * {
        border: 1px solid red; 
    } */

    html, body {
      height: 100%; /* Ensure full viewport height */
      margin: 0;    /* Remove default margins */
      overflow: hidden; /* Prevent scrolling at the body and html level */
      font-size: var(--base-font-size);
      line-height: calc(var(--line-height-multiplier) * 1em);
      font-family: 'FuturaHandwritten';
      font-weight: 100;
      background-color: #e9e9e9;
    }
  
    body {
      display: flex;
      justify-content: center; /* Horizontally center the child content/containers */
      align-items: center;
      height: 100vh;
    }
  
    @font-face{ 
        font-family: 'FuturaHandwritten';
        font-style: normal;
        src: url('./assets/FuturaHandwritten.ttf') format('truetype');
    }

    /* Range slider styling - thank you https://range-input-css.netlify.app/ */

    /*********** Baseline, reset styles ***********/
    input[type="range"] {
      -webkit-appearance: none;
      appearance: none;
      background: transparent;
      cursor: pointer;
      width: 200px;
    }

    /* Removes default focus */
    input[type="range"]:focus {
      outline: none;
    }

    /******** Chrome, Safari, Opera and Edge Chromium styles ********/
    /* slider track */
    input[type="range"]::-webkit-slider-runnable-track {
      background-color: #bfbfbf;
      border-radius: 0.5rem;
      height: 0.3rem;
    }

    /* slider thumb */
    input[type="range"]::-webkit-slider-thumb {
      -webkit-appearance: none; /* Override default look */
      appearance: none;
      margin-top: -5.6px; /* Centers thumb on the track */
      background-color: #808080;
      border-radius: 0.5rem;
      height: 1rem;
      width: 1rem;
    }

    input[type="range"]:focus::-webkit-slider-thumb {
      outline: 3px solid #808080;
      outline-offset: 0.125rem;
    }

    /*********** Firefox styles ***********/
    /* slider track */
    input[type="range"]::-moz-range-track {
      background-color: #bfbfbf;
      border-radius: 0.5rem;
      height: 0.3rem;
    }

    /* slider thumb */
    input[type="range"]::-moz-range-thumb {
      background-color: #808080;
      border: none; /*Removes extra border that FF applies*/
      border-radius: 0.5rem;
      height: 1rem;
      width: 1rem;
    }

    input[type="range"]:focus::-moz-range-thumb{
      outline: 3px solid #808080;
      outline-offset: 0.125rem;
    }

